--- a/src/voicify-assistant-sdk/src/main/res/values/strings.xml
+++ b/src/voicify-assistant-sdk/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="dark_light_gray">#A3A3A3</string>
     <string name="silver">#CCCCCC</string>
     <string name="white_20_percent">#33ffffff</string>
+    <string name="black_5_percent">#0d000000</string>
 
 <!--    Words-->
     <string name="speak">SPEAK</string>
@@ -29,6 +30,7 @@
     <string name="send_inactive_image">https://voicify-prod-files.s3.amazonaws.com/99a803b7-5b37-426c-a02e-63c8215c71eb/0c5aa61c-7d6c-4272-abd2-75d9f5771214/Send-2-.png</string>
     <string name="close_assistant_image">https://voicify-prod-files.s3.amazonaws.com/99a803b7-5b37-426c-a02e-63c8215c71eb/a6de04bb-e572-4a55-8cd9-1a7628285829/delete-2.png</string>
     <string name="header_avatar_image">https://voicify-prod-files.s3.amazonaws.com/99a803b7-5b37-426c-a02e-63c8215c71eb/eb7d2538-a3dc-4304-b58c-06fdb34e9432/Mark-Color-3-.png</string>
+    <string name="body_avatar_image">https://voicify-dev-files.s3.amazonaws.com/52dfe3a1-b44e-4ff1-ac02-04f0a139cd51/f78ab9db-6708-4e16-a247-ef0a93aeb79f/voicify-logo.png</string>
 <!--    Misc-->
     <string name="textbox_cursor_editor_field_name">mEditor</string>
     <string name="animation_scale_y">scaleY</string>
@@ -47,4 +49,5 @@
     <string name="assistant_state_misunderstood">I didn\'t catch that...</string>
     <string name="close_assistant_effect_name">closeAssistant</string>
     <string name="drawer_welcome_text">How can i help?</string>
+    <string name="chrome_package_name">com.android.chrome</string>
 </resources>
